--- a/termos-de-uso.html
+++ b/termos-de-uso.html
@@ -196,7 +196,7 @@
                                    <p><i class="fa fa-whatsapp"></i></i> <a href="">(11) 4433-6795</a></p>
                                    <p><i class="fa fa-envelope-o"></i> <a href="#">contato@wiicred.com.br</a></p>
                               </div>
-                                   <p>DIRECTX - TELEATENDIMENTO EIRELI
+                                   <p>FHBS TECH CORRESPONDENTE EIRELI
                                    <br>Rua Cel Alfredo Flaquer, 125 - Sala 64
                                    <br>Centro, Santo André - SP</p>
                              
