--- a/dpo.html
+++ b/dpo.html
@@ -51,7 +51,7 @@
                          <li><a href="#about" class="smoothScroll">About Us</a></li>-->
                          <li><a href="#team" class="smoothScroll">Crédito Consignado</a></li>
                          <li><a href="#news" class="smoothScroll">Crédito Pessoal</a></li>
-                         <li><a href="#google-map" class="smoothScroll">Nossas Lojas</a></li>
+                         <li><a href="#google-map" class="smoothScroll">Nossa Loja</a></li>
                          <li class="appointment-btn"><a href="#appointment">Simular</a></li>
                     </ul>
                </div>
@@ -98,7 +98,7 @@
           <div class="container">
                <div class="row">
 
-                    <p style="font-size: 13px; padding-bottom:20px;">FHBS Tech detentora da marca “WiiCred” é correspondente bancário credenciado em diversas instituições financeiras. O crédito é sujeito a margem consignável disponível e adequação à política de concessão estabelecida por cada instituição. Valores de parcelas, prazos, taxa de juros, tarifas e CET (Custo Efetivo Total) podem variar conforme o INSS e a qualquer tempo. Taxa de Juros máxima de 2,14 a.m. e/ou 28,88 a.a. Todas as operações de crédito têm incidência de IOF, conforme legislação vigente. É direito ao mutuário o pagamento antecipado a qualquer tempo.</p>
+                    <p style="font-size: 13px; padding-bottom:20px;">SM Apoio Administrativo LTDA detentora da marca “WiiCred” é correspondente bancário credenciado em diversas instituições financeiras. O crédito é sujeito a margem consignável disponível e adequação à política de concessão estabelecida por cada instituição. Valores de parcelas, prazos, taxa de juros, tarifas e CET (Custo Efetivo Total) podem variar conforme o INSS e a qualquer tempo. Taxa de Juros máxima de 2,14 a.m. e/ou 28,88 a.a. Todas as operações de crédito têm incidência de IOF, conforme legislação vigente. É direito ao mutuário o pagamento antecipado a qualquer tempo.</p>
 
                     <div class="col-md-4 col-sm-4"> 
                          <div class="footer-thumb">
@@ -121,7 +121,7 @@
                               <h4 class="wow fadeInUp" data-wow-delay="0.4s">Veja Também</h4>
                               <div class="latest-stories">
                                    <div class="stories-info">
-                                        <a href="nossas-lojas.html"><h5>Nossas Lojas</h5></a>
+                                        <a href="nossas-lojas.html"><h5>Nossa Loja</h5></a>
                                    </div>
                               </div>
                               <div class="latest-stories">
@@ -153,7 +153,7 @@
                                    <p><i class="fa fa-whatsapp"></i></i> <a href="">(11) 4433-6795</a></p>
                                    <p><i class="fa fa-envelope-o"></i> <a href="#">contato@wiicred.com.br</a></p>
                               </div>
-                                   <p>FHBS TECH CORRESPONDENTE EIRELI
+                                   <p>SM APOIO ADMINISTRATIVO LTDA
                                    <br>Rua Cel Alfredo Flaquer, 125 - Sala 64
                                    <br>Centro, Santo André - SP</p>
                              
