--- a/termos-de-uso.html
+++ b/termos-de-uso.html
@@ -51,7 +51,7 @@
                          <li><a href="#about" class="smoothScroll">About Us</a></li>-->
                          <li><a href="#team" class="smoothScroll">Crédito Consignado</a></li>
                          <li><a href="#news" class="smoothScroll">Crédito Pessoal</a></li>
-                         <li><a href="#google-map" class="smoothScroll">Nossas Lojas</a></li>
+                         <li><a href="#google-map" class="smoothScroll">Nossa Loja</a></li>
                          <li class="appointment-btn"><a href="#appointment">Simular</a></li>
                     </ul>
                </div>
@@ -164,7 +164,7 @@
                               <h4 class="wow fadeInUp" data-wow-delay="0.4s">Veja Também</h4>
                               <div class="latest-stories">
                                    <div class="stories-info">
-                                        <a href="nossas-lojas.html"><h5>Nossas Lojas</h5></a>
+                                        <a href="nossas-lojas.html"><h5>Nossa Loja</h5></a>
                                    </div>
                               </div>
                               <div class="latest-stories">
