--- a/dpo.html
+++ b/dpo.html
@@ -51,7 +51,7 @@
                          <li><a href="#about" class="smoothScroll">About Us</a></li>-->
                          <li><a href="#team" class="smoothScroll">Crédito Consignado</a></li>
                          <li><a href="#news" class="smoothScroll">Crédito Pessoal</a></li>
-                         <li><a href="#google-map" class="smoothScroll">Nossa Loja</a></li>
+
                          <li class="appointment-btn"><a href="#appointment">Simular</a></li>
                     </ul>
                </div>
@@ -119,11 +119,7 @@
                     <div class="col-md-4 col-sm-4"> 
                          <div class="footer-thumb"> 
                               <h4 class="wow fadeInUp" data-wow-delay="0.4s">Veja Também</h4>
-                              <div class="latest-stories">
-                                   <div class="stories-info">
-                                        <a href="nossas-lojas.html"><h5>Nossa Loja</h5></a>
-                                   </div>
-                              </div>
+                              
                               <div class="latest-stories">
                                    <div class="stories-info">
                                         <a href="politicas-de-privacidade.html"><h5>Politicas de Privacidade</h5></a>
@@ -154,8 +150,8 @@
                                    <p><i class="fa fa-envelope-o"></i> <a href="#">contato@wiicred.com.br</a></p>
                               </div>
                                    <p>SM APOIO ADMINISTRATIVO LTDA
-                                   <br>Rua Cel Alfredo Flaquer, 125 - Sala 64
-                                   <br>Centro, Santo André - SP</p>
+                                        <br>Rua Arlindo Colaço, 323B - Sala 64
+                                        <br>São Miguel Paulista, São Miguel - SP</p>
                              
                          </div>
                     </div>
